--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Totallylazy</h1>
         <h2>Another functional library for Java</h2>
-        <a href="https://github.com/bodar/totallylazy" class="github">Fork me on GitHub</a>
+        <a href="https://github.com/you"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/c6286ade715e9bea433b4705870de482a654f78a/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_white_ffffff.png"></a>
     </header>
 
     <section>
@@ -30,6 +30,23 @@
             <li>Support Functors and Applicative Functors</li>
             <li>Supports runtime multi-method dispatch and pattern matching</li>
         </ul>
+
+        <pre><code class="language-java">sequence(1, 2, 3, 4).filter(even); // lazily returns 2,4
+sequence(1, 2).map(toString); // lazily returns "1", "2"
+sequence(1, 2).mapConcurrently(toString); // lazily distributes the work to background threads
+sequence(1, 2, 3).take(2); // lazily returns 1,2
+sequence(1, 2, 3).drop(2); // lazily returns 3
+sequence(1, 2, 3).tail(); // lazily returns 2,3
+sequence(1, 2, 3).head(); // eagerly returns 1
+sequence(1, 2, 3).reduce(sum); // eagerly return 6
+sequence(1, 3, 5).find(even); // eagerly returns none()
+sequence(1, 2, 3).contains(2); // eagerly returns true
+sequence(1, 2, 3).exists(even); // eagerly return true
+sequence(1, 2, 3).forAll(odd); // eagerly returns false;
+sequence(1, 2, 3).foldLeft(0, add); // eagerly returns 6
+sequence(1, 2, 3).toString(); // eagerly returns "1,2,3"
+sequence(1, 2, 3).toString(":"); // eagerly returns "1:2:3"
+        </code></pre>
     </section>
 
    <aside>
