--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@ sequence(1, 2, 3).exists(even); // eagerly return true
 sequence(1, 2, 3).forAll(odd); // eagerly returns false;
 sequence(1, 2, 3).foldLeft(0, add); // eagerly returns 6
 sequence(1, 2, 3).toString(); // eagerly returns "1,2,3"
-sequence(1, 2, 3).toString(":"); // eagerly returns "1:2:3"
-        </code></pre>
+sequence(1, 2, 3).toString(":"); // eagerly returns "1:2:3"</code></pre>
     </section>
 
    <aside>
