Added links to other langauages

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset='utf-8'/>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="font-mfizz/font-mfizz.css"/>
     <title>Totallylazy</title>
   </head>
 
@@ -66,6 +68,13 @@ sequence(1, 2, 3).toString(":"); // eagerly returns "1:2:3"</code></pre>
     &lt;artifactId&gt;totallylazy&lt;/artifactId&gt;
     &lt;version&gt;1049&lt;/version&gt;
 &lt;/dependency&gt;</code></pre>
+
+    <h3>Other languages</h3>
+
+    <ul class="languages">
+        <li><a href="https://github.com/kingsleyh/totally_lazy" class="button ruby"><i class="icon-ruby"></i> Ruby</a></li>
+        <li><a href="https://github.com/kingsleyh/totally_lazy" class="button objective-c"><i class="icon-objc"></i> Obj-C</a></li>
+    </ul>
 
     <aside>
    </aside>
