Added support links

--- a/index.html
+++ b/index.html
@@ -50,18 +50,19 @@ sequence(1, 2, 3).toString(); // eagerly returns "1,2,3"
 sequence(1, 2, 3).toString(":"); // eagerly returns "1:2:3"</code></pre>
     </section>
 
-    <h3>Installation</h3>
+    <section>
+        <h2>Installation</h2>
 
-    <h4><a href="http://maven.apache.org/">Maven</a></h4>
+        <h4><a href="http://maven.apache.org/">Maven</a></h4>
 
-    <p>Add our repo to the repositories section in you pom.xml</p>
+        <p>Add our repo to the repositories section in you pom.xml</p>
 
     <pre><code class="language-xml">&lt;repository&gt;
     &lt;id&gt;repo.bodar.com&lt;/id&gt;
     &lt;url&gt;http://repo.bodar.com&lt;/url&gt;
 &lt;/repository&gt;</code></pre>
 
-    <p>Then add our dependency</p>
+        <p>Then add our dependency</p>
 
     <pre><code class="language-xml">&lt;dependency&gt;
     &lt;groupId&gt;com.googlecode.totallylazy&lt;/groupId&gt;
@@ -69,12 +70,31 @@ sequence(1, 2, 3).toString(":"); // eagerly returns "1:2:3"</code></pre>
     &lt;version&gt;1049&lt;/version&gt;
 &lt;/dependency&gt;</code></pre>
 
-    <h3>Other languages</h3>
+    </section>
 
-    <ul class="languages">
-        <li><a href="https://github.com/kingsleyh/totally_lazy" class="button ruby"><i class="icon-ruby"></i> Ruby</a></li>
-        <li><a href="https://github.com/kingsleyh/totally_lazy" class="button objective-c"><i class="icon-objc"></i> Obj-C</a></li>
-    </ul>
+    <section>
+        <h2>Support</h2>
+
+        <p>Friendly support is available at our Google Group or post a question on StackOverflow with tag totallylazy</p>
+
+        <nav class="support">
+            <a href="https://groups.google.com/forum/?fromgroups#!forum/totallylazy" class="button google-groups"><i class="fa fa-group"></i> Groups</a>
+            <a href="http://stackoverflow.com/questions/tagged/totallylazy" class="button stackoverflow"><i class="fa fa-stack-overflow"></i> StackOverflow</a>
+        </nav>
+    </section>
+
+    <section>
+        <h2>Other languages</h2>
+
+        <p>These are ports of TotallyLazy done by other people</p>
+
+        <nav class="languages">
+            <a href="https://github.com/kingsleyh/totally_lazy" class="button ruby"><i class="icon-ruby"></i> Ruby</a>
+            <a href="https://github.com/stuartervine/OCTotallyLazy" class="button objective-c"><i class="icon-objc"></i> Obj-C</a>
+        </nav>
+    </section>
+
+
 
     <aside>
    </aside>
