--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <link rel="stylesheet" href="font-mfizz/font-mfizz.css"/>
     <title>Totallylazy</title>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="highlight.js"></script>
-
     </head>
 
   <body>
@@ -103,6 +100,7 @@ sequence(1, 2, 3).toString(":"); // eagerly returns "1:2:3"</code></pre>
     <aside>
    </aside>
 
+    <script type="text/javascript" src="code.js"></script>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
