Fixed fork me link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <h1>Totallylazy</h1>
         <h2>Another functional library for Java</h2>
-        <a href="https://github.com/you"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/c6286ade715e9bea433b4705870de482a654f78a/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_white_ffffff.png"></a>
+        <a href="https://github.com/bodar/totallylazy/"><img src="fork.me.on.github.png" alt="Fork me on GitHub"></a>
     </header>
 
     <section>
