Fixed fork me link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <h1>Totallylazy</h1>
         <h2>Another functional library for Java</h2>
-        <a href="https://github.com/bodar/totallylazy/"><img src="fork.me.on.github.png" alt="Fork me on GitHub"></a>
+        <a href="https://github.com/bodar/totallylazy/"><img style="position: absolute; top: 0; left: 0; border: 0;" src="fork.me.on.github.png" alt="Fork me on GitHub"></a>
     </header>
 
     <section>
