--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <header>
-        <h1>Totallylazy</h1>
+        <h1><i class="logo"></i> Totallylazy</h1>
         <h2>Another functional library for Java</h2>
         <a href="https://github.com/bodar/totallylazy/"><img style="position: absolute; top: 0; left: 0; border: 0;" src="fork.me.on.github.png" alt="Fork me on GitHub"></a>
     </header>
@@ -43,7 +43,7 @@
 
         <pre><code class="language-java">import static com.googlecode.totallylazy.Sequences.* // Where the sequence factory methods live;
 import static com.googlecode.totallylazy.Callables.* // Lots of helper functions;
-import static com.googlecode.totallylazy.numbers.Numbers.*; // Used for working with all Java Number types</code></pre>
+import static com.googlecode.totallylazy.numbers.Numbers.*; // Used for working with Numbers</code></pre>
 
         <p>Now we can try some of the following:</p>
 
