Converted to html

--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@ libraryDependencies += "com.googlecode.totallylazy" % "totallylazy" % "${LATEST_
     </section>
 
     <section>
+        
+    </section>
+
+
+    <section>
         <h2>Support</h2>
 
         <p>Friendly support is available at our Google Group or post a question on StackOverflow with tag totallylazy</p>
