Added tagline and motivation

--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
 ---
 ---
+<section class="motivation">
+    <h2>Motivation</h2>
 
-<h2>Another functional library for Java</h2>
+    <p>TotallyLazy brings functional programming techniques to Java in a way that complements the standard library while adding missing features like persistent data structures, parser combinators and more.
+        Unlike other libraries TotallyLazy strives for excellent interop with existing Java interfaces so for example persistent data structures all implement the read only part of each collection interface </p>
+</section>
 
 <section>
-        <p>A functional library for Java that has the following features</p>
+    <h2>Features</h2>
 
-        <ul>
-            <li>Tries to be as lazy as possible just like <a href="http://clojure.org/">Clojure's</a> collection library</li>
-            <li>Works with Iterable, Iterator, Arrays, Char Sequences, Dates and Numbers (i.e virtually everything)</li>
-            <li>Follows the <a href="http://hyperpolyglot.org/ml">ML family</a> of function / method names (Standard ML, oCaml, F#, Scala, Haskell)</li>
-            <li>Uses and extends Callable interface for maximum interop (i.e Can use with Clojure, <a href="http://www.hazelcast.com/">Hazelcast</a>)</li>
-            <li>Optionally supports using <a href="http://code.google.com/p/hamcrest/">Hamcrest</a> matchers as predicates</li>
-            <li>Supports chaining of all methods (Recommended) or the use of static imports for all methods.</li>
-            <li>Optionally supports creating Callables via dynamic proxies (requires <a href="http://cglib.sourceforge.net/">cglib-2.2</a> and <a href="http://code.google.com/p/objenesis/">objenesis-1.2</a>)</li>
-            <li>Contains PersistentSet, PersistentMap, PersistentSortedMap, PersistentList</li>
-            <li>Support Functors and Applicative Functors</li>
-            <li>Supports runtime multi-method dispatch and pattern matching</li>
-        </ul>
+    <p>A functional library for Java that has the following features</p>
 
-    </section>
+    <ul>
+        <li>Tries to be as lazy as possible just like <a href="http://clojure.org/">Clojure's</a> collection library</li>
+        <li>Works with Iterable, Iterator, Arrays, Char Sequences, Dates and Numbers (i.e virtually everything)</li>
+        <li>Follows the <a href="http://hyperpolyglot.org/ml">ML family</a> of function / method names (Standard ML, oCaml, F#, Scala, Haskell)</li>
+        <li>Uses and extends Callable interface for maximum interop (i.e Can use with Clojure, <a href="http://www.hazelcast.com/">Hazelcast</a>)</li>
+        <li>Optionally supports using <a href="http://code.google.com/p/hamcrest/">Hamcrest</a> matchers as predicates</li>
+        <li>Supports chaining of all methods (Recommended) or the use of static imports for all methods.</li>
+        <li>Optionally supports creating Callables via dynamic proxies (requires <a href="http://cglib.sourceforge.net/">cglib-2.2</a> and <a href="http://code.google.com/p/objenesis/">objenesis-1.2</a>)</li>
+        <li>Contains PersistentSet, PersistentMap, PersistentSortedMap, PersistentList</li>
+        <li>Support Functors and Applicative Functors</li>
+        <li>Supports runtime multi-method dispatch and pattern matching</li>
+    </ul>
+</section>
 
     <section>
         <h2>10 second tutorial</h2>
