--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <h2>Motivation</h2>
 
     <p>TotallyLazy brings functional programming techniques to Java in a way that complements the standard library while adding missing features like persistent data structures, parser combinators and more.
-        Unlike other libraries TotallyLazy strives for excellent interop with existing Java interfaces so for example persistent data structures all implement the read only part of each collection interface </p>
+        TotallyLazy has been built by usage so has hundreds of helper functions and always stives for the highest level of interop with standard Java interfaces.</p>
 </section>
 
 <section>
